@startuml

title __SOUND-ADAPTATION-SERVICE's Class Diagram__\n

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    class pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationServiceApp {
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    namespace audio {
      class pt.ulisboa.tecnico.surespace.ds2os.service.audio.AudioProcessing {
      }
    }
  }
  

  namespace pt.ulisboa.tecnico.surespace.ds2os.service {
    namespace audio {
      class pt.ulisboa.tecnico.surespace.ds2os.service.audio.WavFile {
      }
    }
  }
  

  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService -up-|> pt.ulisboa.tecnico.surespace.ds2os.service.AdaptationService
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.arduino.device.SoundBeacon : beacon
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.audio.AudioProcessing : witness
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessAmplitudeSamplingRateValue
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessAmplitudeValue
  pt.ulisboa.tecnico.surespace.ds2os.service.SoundAdaptationService o-- pt.ulisboa.tecnico.surespace.ds2os.service.domain.RegularNode : witnessIsOn
  pt.ulisboa.tecnico.surespace.ds2os.service.audio.AudioProcessing o-- pt.ulisboa.tecnico.surespace.ds2os.service.audio.WavFile : wavFile
  pt.ulisboa.tecnico.surespace.ds2os.service.audio.WavFile o-- pt.ulisboa.tecnico.surespace.ds2os.service.audio.WavFile.IOState : ioState


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
